src2/lsqt-cuda/log_run_bench.err
vector.cu(251): error: identifier "__syncwrap" is undefined
    v += s[t + 32]; __syncwrap();
                    ^

1 error detected in the compilation of "vector.cu".
make: *** [Makefile.NVD:24: obj_gpu/vector.o] Error 2
